--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               <span>Communication, Support, Education</span></h1>
             <ul>
               <li class="ad">Victoria, BC</li>
-              <li class="mail">email@gmail.com</li>
-              <li class="tel">111 111 1111</li>
+              <li class="mail">lashakizuk@gmail.com</li>
+              <li class="tel">778 239 1099</li>
               <li class="web">lashakizuk.github.io</li>
             </ul>
           </div>
