--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
             <h3>Sept 2006 - June 2008</h3>
             <p>Malaspina University, Nanaimo <br />
               <em>Business Administration</em></p>
-          </div>
-					<div class="content">
-						<p>Emergency First Aid CPR-C <br />
-							<em>Expires June, 2020</em></p>
-					</div>
-					<div class="content">
-						<p>Foodsafe <br />
-							<em>Expires June, 2019</em></p>
-					</div>
+        </div>
+	<div class="content">
+	 <p>Emergency First Aid CPR-C <br />
+	 <em>Expires June, 2020</em></p>
+	</div>
+	<div class="content">
+	 <p>Foodsafe <br />
+	 <em>Expires June, 2019</em></p>
+	</div>
         </div>
         <!-- End 2nd Row -->
         <!-- Begin 3rd Row -->
@@ -102,6 +102,8 @@
               <li>Conflict-Resolution</li>
               <li>Fluently Bilingual</li>
               <li>Continuous Improvement</li>
+		    <li>Direct billing insurance</li>
+		    <li>Mapping & Uploading patient charts</li>
             </ul>
           </div>
           <div class="content">
