--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h3>Core Competencies</h3>
             <ul class="skills">
               <li>Creative Problem Solver</li>
-              <li>Strong Communication Skills</li>
+              <li>Concise Communication</li>
               <li>Focussed</li>
               <li>Solutions Oriented</li>
               <li>Oral &amp; Written Etiquette</li>
@@ -103,7 +103,7 @@
               <li>Fluently Bilingual</li>
               <li>Continuous Improvement</li>
 		    <li>Direct billing insurance</li>
-		    <li>Mapping & Uploading patient charts</li>
+		    <li>Mapping patient charts</li>
             </ul>
           </div>
           <div class="content">
