--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
               <li>Conflict-Resolution</li>
               <li>Fluently Bilingual</li>
               <li>Continuous Improvement</li>
-		    <li>Direct billing insurance</li>
-		    <li>Mapping patient charts</li>
+		<li>Direct billing insurance</li>
+		<li>Mapping patient charts</li>
+		    <li>Driven</li>
             </ul>
           </div>
           <div class="content">
